I started on "Types" in usage docs and tweaked compiler code.
I added to the usage docs "Types" section. I started in on some examples, but more will need to be added. I will add examples of parameterized types and examples explaining how variables in type declarations are not really variables so much as "possessive" things. For example, if you wanted the length of the string, null-terminated strings could override the string's length as a function-like operator rather than storing it in a variable like other strings might.

I also fixed all the compilation errors in the current compiler code. Again, so far, the compiler consists mostly of classes rather than actual runtime code so far, but the classes form the organizational structure that will be used.
One notable change here is that I got rid of most of the "using namespace std;" clauses. I read an article describing how using namespaces carelessly can cause ambiguity and that the C++ compiler doesn't always resolve this well, so from now on, I will be using individual things from std in "using" blocks rather than just putting "using namespace std" everywhere.

--- a/compiler/.cproject
+++ b/compiler/.cproject
@@ -28,8 +28,8 @@
 								<option id="gnu.cpp.compiler.option.optimization.level.1940565398" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.debugging.level.1540022421" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.dialect.std.1695929683" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.default" valueType="enumerated"/>
-								<option id="gnu.cpp.compiler.option.other.other.1029524529" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 --std=c++11" valueType="string"/>
-								<option id="gnu.cpp.compiler.option.preprocessor.def.943400787" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
+								<option id="gnu.cpp.compiler.option.other.other.1029524529" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 --std=c++14" valueType="string"/>
+								<option id="gnu.cpp.compiler.option.preprocessor.def.943400787" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__cplusplus=201303L"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1632707337" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
